<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        />

    <ImageView
        android:id="@+id/id_photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/text_title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/damdung" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_name"
        android:layout_below="@+id/id_photo"
        android:text="@string/phone_name"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:layout_alignParentEnd="false"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/price_name"
        android:layout_below="@+id/id_photo"
        android:text="@string/phone_price"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:layout_alignParentEnd="true"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_descs"
        android:layout_below="@+id/price_name"
        android:text="@string/phone_desc"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:layout_alignParentEnd="false"
        android:textSize="18sp"
        />

    <ImageView
        android:id="@+id/icon_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_descs"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:src="@drawable/baseline_smartphone_24" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/memory"
        android:text="@string/camera"
        android:layout_below="@+id/text_descs"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_toEndOf="@+id/icon_camera"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_camera"
        android:src="@drawable/baseline_camera_alt_24"
        android:layout_below="@+id/icon_memory"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/camera"
        android:text="@string/camera"
        android:layout_below="@+id/icon_memory"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_toEndOf="@+id/icon_camera"/>


</RelativeLayout>